fixed issues on mobile size footer

--- a/cart.css
+++ b/cart.css
@@ -350,6 +350,7 @@ body{
         #first>div{
             display: flex;
             flex-direction: column;
+            padding-right: 10px;
         }
 }
 
@@ -403,6 +404,7 @@ body{
         #first>div{
             display: flex;
             flex-direction: column;
+            padding-right: 10px;
         }
 }
 
